--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <title>ekoPique</title>
     <script defer src="/bundle.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.0/css/bulma.min.css">
+    <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
     <link rel="stylesheet" href="/style.css" />
   </head>
   <body>
